chore: Update workflow paths

--- a/.github/workflows/build-github-activity.yml
+++ b/.github/workflows/build-github-activity.yml
@@ -5,7 +5,10 @@ on:
     branches:
       - main
     paths:
-      - 'github-activity/*'
+      - 'github-activity/.dockerignore'
+      - 'github-activity/Dockerfile'
+      - 'github-activity/entrypoint.sh'
+      - 'github-activity/package.json'
   workflow_dispatch:
 
 jobs:
