--- a/ungh/package.json
+++ b/ungh/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "prepare": "nitropack prepare",
     "build": "nitropack build",
-    "dev": "nitropack dev"
+    "dev": "nitropack dev --port=3001"
   },
   "devDependencies": {
     "nitropack": "^2.9.7",
@@ -15,5 +15,8 @@
   "packageManager": "pnpm@9.12.2",
   "dependencies": {
     "marked": "^14.1.3"
+  },
+  "nitro": {
+    "compatibilityDate": "2024-11-12"
   }
 }
