--- a/.github/workflows/build-github-activity.yml
+++ b/.github/workflows/build-github-activity.yml
@@ -24,6 +24,5 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: build image
         run: |
-          docker build -t ghcr.io/xiaoxuan6/github-activity:latest .
-          docker push ghcr.io/xiaoxuan6/github-activity:latest
+          docker build --platform linux/amd64,linux/arm64 -t ghcr.io/xiaoxuan6/github-activity:latest . --push
         working-directory: github-activity
