--- a/.github/workflows/build-ungh.yml
+++ b/.github/workflows/build-ungh.yml
@@ -19,14 +19,20 @@ jobs:
     if: github.repository == 'xiaoxuan6/docker-images'
     steps:
       - uses: actions/checkout@v1
-      - uses: azure/docker-login@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - uses: docker/login-action@v1
         with:
-          login-server: ghcr.io
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: print docker version
         run: docker --version
+
       - name: build image
         run: |
-          docker build --platform linux/amd64,linux/arm64 -t ghcr.io/xiaoxuan6/ungh:latest . --push
+          docker buildx build --platform linux/amd64,linux/arm64 -t ghcr.io/xiaoxuan6/ungh:latest . --push
         working-directory: ungh
